Wed Jun  6 09:34:22 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 * data/drivers.list (sync with the Testing branch r957): 
   - fixe a typo on upscode2 driver name
   - add "Fiskars 9200 with UPS Information Unit" compatibility

Tue Jun  5 19:05:48 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/conf.c, drivers/main.c: Prepend driver name to socket again.
   Otherwise we loose control over the socketname, which prevents us
   from creating sockets for autodetected UPSes. This brings the socket
   name in line with the PID name.

Tue Jun  5 13:25:56 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>
 
 * Sync with the Testing branch (r949,952,953):
   - data/drivers.list: removed Geek Squad GS1285U from Cyber Power Systems,
     according to Peter Selinger comment from Jan. 26 2007. The Cyber Power
     model is AE550.
   - NEWS, UPGRADING: first update round
   - update config.guess, config.sub and install.sh

Sat Jun  2 19:37:08 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/powerpanel.h: setting the battery.low value requires only
   two (and exactly two) digits (copy-and-paste error)

Thu May 31 08:33:54 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-shut.h, mge-hid.c: missing models completion (Ellipse MAX and
   Protection Center)

Thu May 31 10:20:55 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - scripts/hal/*: added Belkin UPSes to the list.

Wed May 30 19:35:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/powerpanel.[ch]: the text mode protocol doesn't have a checksum
   for the status bytes

Wed May 30 19:31:22 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * packaging/redhat:
   - remove IPv6 patch (is already in the trunk)
   - always start driver(s) through upsdrvctl (the old method of starting
     them directly with command line parameters without configuring ups.conf
     no longer works)

Wed May 30 10:51:54 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

  * newmge-shut driver: