@@ -89,10 +89,6 @@ for more information.
 
 This is like setting \fIvar\fR=\fIval\fR in the \fBups.conf\fR(5), but
 \-x overrides any settings from that file.
-.IP device
-The /dev entry corresponding to the TTY the UPS is connected to.  This
-is optional if you are using the \fB\-a\fR autoconfiguration option,
-since the "port" entry in the \fBups.conf\fR(5) will be used when available.
 
 .SH DIAGNOSTICS
 Information about the startup process is printed to stdout.  Additional
